--- a/andriod app/BasicApp2/app/src/main/res/values/strings.xml
+++ b/andriod app/BasicApp2/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Basic App</string>
+    
+    <string-array name="category">
+        <item>Food</item>
+        <item>Political</item>
+        <item>Travel</item>
+        <item>Study</item>
+    </string-array>
 </resources>
