--- a/andriod app/BasicApp2/app/src/main/res/values/strings.xml
+++ b/andriod app/BasicApp2/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Basic App</string>
     
-    <string-array name="category">
+    <string-array name="blogCategory">
         <item>Food</item>
         <item>Political</item>
         <item>Travel</item>
